--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Save Page</title>
+    <title>Session Sevr</title>
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="src/css/uikit/uikit.min.css" />
 
@@ -22,7 +22,7 @@
         <div class="sidebar uk-visible@m">
             <div class="uk-container uk-container-small uk-margin-large-top">
                 <h1><img src="icon16.png" width="50px" height="50px"></h1>
-                <h3><a href="#top" class="uk-link-reset">Save Page</a></h3>
+                <h3><a href="#top" class="uk-link-reset">Session Sevr</a></h3>
                 <ul class="uk-nav uk-nav-default">
                     <li class="uk-nav-header">Link</li>
                     <li><a href="#save-pages">Save Pages</a></li>
@@ -30,12 +30,35 @@
                     <li><a href="#recently-pages">Recently Closed Pages</a></li>
                 </ul>
             </div>
-
         </div>
+        <header class="uk-position-top uk-hidden@m">
+            <div class="uk-position-right uk-padding uk-padding-small">
+                <button class="uk-button uk-button-link" type="button" uk-toggle="target: #offcanvas-flip">
+                    <span uk-icon="icon: menu; ratio: 1.5"></span>
+                </button>
+            </div>
+            <div id="offcanvas-flip" uk-offcanvas="flip: true; overlay: true">
+                <div class="uk-offcanvas-bar">
+            
+                    <button class="uk-offcanvas-close" type="button" uk-close></button>
+            
+                    <div class="uk-container uk-container-small uk-margin-large-top">
+                        <h1><img src="icon16.png" width="50px" height="50px"></h1>
+                        <h3><a href="#top" class="uk-link-reset">Session Sevr</a></h3>
+                        <ul class="uk-nav uk-nav-default">
+                            <li class="uk-nav-header">Link</li>
+                            <li><a href="#save-pages">Save Pages</a></li>
+                            <li><a href="#backup-pages">Backup Pages</a></li>
+                            <li><a href="#recently-pages">Recently Closed Pages</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </header>
         <div class="main uk-section uk-section-default">
             <div class="uk-container uk-container-small">
-                <div>
-                    <h2 class="uk-heading-bullet" id="save-pages">Saved Pages <span uk-icon="refresh" id="tab-refresh"
+                <div class="uk-vertical-align uk-text-center">
+                    <h2 id="save-pages">Saved Pages <span uk-icon="refresh" id="tab-refresh"
                             class="icon-btn"></span>
                     </h2>
                     <button id="btn-tab-save" class="btn">Save Pages</span></button>
@@ -48,9 +71,10 @@
                     </div>
                 </div>
 
-                <div class="uk-margin uk-margin-large-top">
-                    <h2 class="uk-heading-bullet" id="backup-pages">Backup Pages <span uk-icon="refresh"
+                <div class="uk-margin uk-margin-large-top uk-vertical-align uk-text-center">
+                    <h2 id="backup-pages">Backup Pages <span uk-icon="refresh"
                             id="tab-backup-refresh" class="icon-btn"></span></h2>
+                    <p class="uk-text-default">Back up all currently open pages periodically.</p>
                     <p id="backup-date"></p>
                     <button id="btn-tab-backup-create" class="btn btn-tab-create">Open All <span
                             uk-icon="move"></span></button>
@@ -60,9 +84,10 @@
                     </div>
                 </div>
 
-                <div class="uk-margin uk-margin-large-top">
-                    <h2 class="uk-heading-bullet" id="recently-pages">Recently Closed Pages <span uk-icon="refresh"
+                <div class="uk-margin uk-margin-large-top uk-vertical-align uk-text-center">
+                    <h2 id="recently-pages">Recently Closed Pages <span uk-icon="refresh"
                             id="tab-recently-refresh" class="icon-btn"></span></h2>
+                    <p class="uk-text-default">Here are the 20 most recentry closed pages.</p>
                     <button id="btn-tab-recently-create" class="btn btn-tab-create">Open All <span
                             uk-icon="move"></span></button>
                     <div class="uk-card uk-card-body">
